[package]
name = "pg-orm"
version = "0.1.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
native-tls = "0.2"
pg-orm-derive = { path = "pg-orm-derive" }
postgres-native-tls = "0.5"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace]
members = [
    ".",
    "pg-orm-derive"
]